Fix alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -149,7 +149,3 @@ body {
 .paw .first {
     color: gold;
 }
-
-.paw input {
-    margin-top: 10px;
-}
